--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,9 @@
             <h1> {{food}}</h1>
             <h2> HAY DAY IS THE BEST GAME EVER!</h2>
             <p>  Hay Day is a freemium mobile farming game developed and published by Supercell. Hay Day was released for iOS on 21 June 2012 and Android on 20 November 2013. According to a 2013 report, Supercell earned $30 million a month from Hay Day and Clash of Clans. In 2013, Hay Day was the fourth highest game in revenue generated. </p>
+            <a href="https://play.google.com/store/apps/details?id=com.supercell.hayday&hl=en">Click to Download this PERFECT game</a>
             <img src="https://cdn.supercell.com/supercell.com/190704084951/supercell.com/files/og_hayday.jpg">
+
             {% if food == "Hay Day" %}
             	<p> Wow, you love to play Hay Day!</p>
             {%else%}
